--- a/electronics_news/news/templates/profile.html
+++ b/electronics_news/news/templates/profile.html
@@ -20,5 +20,6 @@
             </form>
         </div>
     </div>
+    <a href="{% url 'publish_content' %}" class="button">Выпустить новость</a>
 </div>
 {% endblock %}
