--- a/electronics_news/news/templates/content_detail.html
+++ b/electronics_news/news/templates/content_detail.html
@@ -2,6 +2,12 @@
 
 {% block title %}{{ content.title }}{% endblock %}
 
+{% load static %}
+
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/profile_news.css' %}">
+{% endblock %}
+
 {% block content %}
 <h2>{{ content.title }}</h2>
 <p>{{ content.content }}</p>
