--- a/electronics_news/news/templates/edit_profile.html
+++ b/electronics_news/news/templates/edit_profile.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="edit-profile-container">
+<div class="profile-container">
     <h2>Редактировать профиль</h2>
 
     {% if messages %}
