add news page, change styles,

--- a/electronics_news/news/templates/about.html
+++ b/electronics_news/news/templates/about.html
@@ -1,7 +1,33 @@
 {% extends 'base.html' %}
 
 {% block title %}О нас{% endblock %}
+{% load static %}
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/about.css' %}">
+{% endblock %}
 
 {% block content %}
+<div class="about-container">
 
+    <!-- Описание миссии -->
+    <section class="mission">
+        <h2>Наша миссия</h2>
+        <p>Мы стремимся предоставить нашим читателям самые актуальные и достоверные новости из мира электроники. Наш сайт создан, чтобы помочь вам оставаться в курсе новейших технологий, трендов и обзоров, чтобы вы могли принимать осознанные решения о покупке и использовании продуктов.</p>
+    </section>
+
+    <!-- Описание функций сайта -->
+    <section class="features">
+        <h2>Что мы предлагаем</h2>
+        <ul>
+            <li>Свежие новости: Получайте последние обновления о новых технологиях и продуктах.</li>
+            <li>Подробные обзоры: Читайте объективные и полные обзоры устройств.</li>
+        </ul>
+    </section>
+
+    <!-- О команде или проекте -->
+    <section class="team">
+        <h2>Наша команда</h2>
+        <p>Мы — команда энтузиастов, увлеченных технологиями и играми, с опытом работы в журналистике, обзорах и IT-индустрии. Каждый из нас привносит свои знания и страсть к технологиям, чтобы создать качественный контент для наших читателей.</p>
+    </section>
+</div>
 {% endblock %}
