--- a/electronics_news/news/templates/news.html
+++ b/electronics_news/news/templates/news.html
@@ -1,12 +1,44 @@
 {% extends 'base.html' %}
 
-{% block title %}Новости{% endblock %}
+{% block title %}Новости и Обзоры{% endblock %}
 {% load static %}
+{% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/news.css' %}">
-{% block extra_css %}{% endblock %}
-
+{% endblock %}
 
 
 {% block content %}
+<div class="content-container">
+    <h2>Новости</h2>
+    <div class="news-section">
+        {% for news in news_list %}
+            <div class="news-card">
+                <h3>{{ news.title }}</h3>
+                <p class="news-meta">
+                    Автор: {{ news.author.username }} | Дата: {{ news.created_at|date:"d.m.Y" }}
+                </p>
+                <p>{{ news.content|truncatewords:20 }}</p>
+                <a href="{% url 'content_detail' news.id %}">Читать далее</a>
+            </div>
+        {% empty %}
+            <p>Нет новостей для отображения.</p>
+        {% endfor %}
+    </div>
 
+    <h2>Обзоры</h2>
+    <div class="review-section">
+        {% for review in review_list %}
+            <div class="news-card">
+                <h3>{{ review.title }}</h3>
+                <p class="news-meta">
+                    Автор: {{ review.author.username }} | Дата: {{ review.created_at|date:"d.m.Y" }}
+                </p>
+                <p>{{ review.content|truncatewords:20 }}</p>
+                <a href="{% url 'content_detail' review.id %}">Читать далее</a>
+            </div>
+        {% empty %}
+            <p>Нет обзоров для отображения.</p>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
