--- a/electronics_news/news/static/css/login.css
+++ b/electronics_news/news/static/css/login.css
@@ -1,4 +1,4 @@
-/* Центрирование контейнера формы */
+
 .auth-container {
     max-width: 400px;
     margin: 0 auto;
@@ -8,19 +8,19 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     background-color: #fff;
 
-    /* Центрирование по вертикали и горизонтали */
+
     display: flex;
     flex-direction: column;
-    align-items: center; /* Центрирование содержимого по горизонтали */
-    justify-content: center; /* Центрирование содержимого по вертикали */
+    align-items: center;
+    justify-content: center;
 
 
 }
 
-/* Увеличиваем размер шрифта и выравниваем поля */
+
 .auth-container h2 {
     text-align: center;
-    font-size: 24px; /* Увеличиваем размер шрифта */
+    font-size: 24px;
     margin-bottom: 20px;
 }
 
@@ -28,20 +28,20 @@
 .register-form input,
 .password-reset-form input {
     width: 100%;
-    padding: 12px; /* Увеличиваем отступ внутри полей */
-    font-size: 16px; /* Увеличиваем размер шрифта */
+    padding: 12px;
+    font-size: 16px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 @media (min-width: 1920px) {
     .auth-container h2 {
-        font-size: 44px; /* Увеличение размера шрифта заголовка */
+        font-size: 44px;
     }
 
     .auth-form input,
     .register-form input,
     .password-reset-form input {
-        font-size: 44px; /* Увеличение размера шрифта полей */
+        font-size: 44px;
     }
 }
