--- a/electronics_news/news/templates/edit_content.html
+++ b/electronics_news/news/templates/edit_content.html
@@ -33,7 +33,7 @@
 
         <h3>Добавить изображения</h3>
         {% for slot in available_image_slots %}
-            <input type="file" name="images" accept="image/*">  <!-- Поле для загрузки нового изображения -->
+            <input type="file" name="images" accept="image/*">
         {% endfor %}
 
         <h3>Уже загруженные видео</h3>
@@ -48,7 +48,7 @@
 
         <h3>Добавить видео</h3>
         {% for slot in available_video_slots %}
-            <input type="file" name="videos" accept="video/*">  <!-- Поле для загрузки нового видео -->
+            <input type="file" name="videos" accept="video/*">
         {% endfor %}
 
         <button type="submit">Сохранить</button>
