--- a/electronics_news/news/templates/password_reset.html
+++ b/electronics_news/news/templates/password_reset.html
@@ -12,7 +12,7 @@
     <h2>Восстановление пароля</h2>
     <form method="POST" action="{% url 'password_reset' %}">
         {% csrf_token %}
-        {{ password_reset_form.as_p }}  <!-- Отображение формы -->
+        {{ password_reset_form.as_p }}
         <button type="submit">Отправить ссылку для восстановления</button>
     </form>
     <div class="switch">
