--- a/electronics_news/news/static/css/base.css
+++ b/electronics_news/news/static/css/base.css
@@ -65,9 +65,9 @@ header {
     right: 0;
     margin: 0;
     padding: 10px;
-    width: 100%;
+    width: 250px;
     z-index: 1000;
-    text-align: center;
+    text-align: left;
 }
 
 .burger-menu li a {
@@ -164,6 +164,8 @@ footer {
     .burger-menu.open {
         display: block;
     }
+
+
 }
 
 @media (min-width: 1920px) {
