--- a/electronics_news/news/templates/base.html
+++ b/electronics_news/news/templates/base.html
@@ -59,7 +59,7 @@
     <script>
         function toggleBurgerMenu() {
             const burgerMenu = document.querySelector('.burger-menu');
-            burgerMenu.classList.toggle('open'); // Убедитесь, что класс переключается
+            burgerMenu.classList.toggle('open');
         }
 
         function toggleContrastIcon() {
