--- a/electronics_news/news/static/css/about.css
+++ b/electronics_news/news/static/css/about.css
@@ -14,18 +14,15 @@
     margin-top: 30px;
 }
 
-.about-container p {
+.about-container p,
+.about-container ul,
+.about-container ul li {
     font-size: 1.1em;
     line-height: 1.6;
     color: #555;
+    margin: 10px 0;
 }
 
 .about-container ul {
-    list-style-type: disc;
-    padding-left: 20px;
-}
-
-.about-container ul li {
-    margin: 10px 0;
-    font-size: 1.1em;
+    padding-left: 0;
 }
