--- a/electronics_news/news/templates/news.html
+++ b/electronics_news/news/templates/news.html
@@ -52,4 +52,6 @@
 {% block extra_js %}
 <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 <script src="{% static 'js/reviews.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.8/dayjs.min.js"></script>
+
 {% endblock %}
